# pleiades_search_api

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
pleiades_search_api/: search.py  web.py
src/pleiades_search_api/: search.py  web.py
tests/: test_search.py  test_text.py
